# Pyro

./: .env.example  pyproject.toml  readme.md
src/: manage.py
src/pyro/: __init__.py  admin.py  apps.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
src/pyro/features/: Camera.py  archive.py  detect.py  main.py
src/pyro/features/video/: CameraFeed.py
src/pyro/migrations/: 0001_initial.py
src/pyro/static/styles/: main.css
src/pyro/templates/components/: time_options.html
src/pyro/templates/pages/: archive.html  base.html  home.html  settings.html
