[project]
name = "pyro"
version = "0.1.0"
description = ""
authors = [
    {name = "Natalia Silivestrova",email = "masternatashka@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.10"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
