[project]
name = "pyro"
version = "0.1.0"
description = ""
authors = [
    {name = "Natalia Silivestrova",email = "masternatashka@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.10"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "ultralytics (>=8.3.200,<9.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
